Q51/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-checker
  namespace: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: frontend
    spec:
      containers:
        - name: checker
          image:  kubernetesway/mysql-connection-checker
