Q51/denay-all-egress-frontned.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all-egress
  namespace: frontend
spec:
  podSelector: {}  # Selects all pods in the namespace
  policyTypes:
    - Egress
