Q51/denay-all-ingress-backend.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all-ingress
  namespace: backend
spec:
  podSelector: {}  # Selects all pods in the namespace
  policyTypes:
    - Ingress
